Todo:
- Make decision:
  - Create a mechanism to set up Open/SaveDialog for each file type.
    OR
  - Create multiple Open/SaveDialogs for each type and show appropiate dialog when needed.
- Add export CEL to PNG.
- Ask for color fit when loading a CEL file.
- Add gradients.
- Autosave state in every 1 min.
- Configurable autosave interval.
- Add dithering to gradient Inks.
- Add setup dialogs to Tools:
  - Circle (center+Radius vs. bounding box)
  - Sep. (boxed)
- Add setup dialogs to Inks:
  - L Grad (dither)
  - V Grad (dither)
  - H Grad (dither)
  - R Grad (dither, Center)
- Add Tool and Ink selector


2023.04.05
- SelectColor tool hinting fixed, now it allows showing hints from other controls.
- ColorSelector added to PaletteEditor.
- Messages are forwarded only to visible controls.
- Right clicking on ColorSelector in PaletteEditor allows you to pick color from
  the image or from the palette.
- Added two mouse click icons to the new font. This makes the old font unusable,
  since it doesn't have these icons.
- Added mouse click tips to SelectColor and PickColor hints.
- Right clicking the palette area of the PaletteEditor closes it (as the hint says).

2023.04.04
- Under the hood: MKMouse2 changes and follow ups.

2023.03.29
- UndoSystem is distilled to a base class and added ImageUndoSystem and ColorUndoSystem.
  The latter is not saved in system state yet.
- File format change in system state. This one breaks the compatibility with older
  saves. (Added Version so it won't do it in the future.)
- ColorUndoSystem is included in the system state save.
- After changing palette color with sliders it is possible to undo/redo the change.
- When leaving slider with button down, it goes back to original position.

2023.03.28
- Moving mouse over the palette in the PaletteEditor show color hint.
- When you are in the PaletteEditor, color hint only visible over the DrawArea or
  over the palette colors.
- Releasing RMB after panning no longer exits PaletteEditor.